improve vscode configuration

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,9 +8,7 @@
         {
             "label": "Build",
             "command": "make",
-            "problemMatcher": [
-                "$gcc"
-            ],
+            "problemMatcher": "$gcc",
             "group": {
                 "kind": "build",
                 "isDefault": true
